--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,22 @@ node_modules
 dist
 build
 .env
+.env.local
+.env.production
 .DS_Store
+
+# Frontend build output for nginx
+frontend-dist/
+
+# SSL certificates
+nginx/ssl/*.pem
+nginx/ssl/*.key
+nginx/ssl/*.crt
+
+# Logs
+*.log
+logs/
+
+# IDE
+.idea/
+.vscode/
