--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.15.0",
     "express": "^4.21.0",
-    "pg": "^8.13.0",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
+    "pg": "^8.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.10",
@@ -29,4 +32,3 @@
     "typescript": "^5.6.0"
   }
 }
-
