feat: add wallet notes feature, fix favorites page refresh, configure domain smart-perp.xyz

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,21 +38,16 @@ http {
 
     server {
         listen 80;
-        server_name _;
-
-        # For Let's Encrypt ACME challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        # Redirect HTTP to HTTPS (uncomment when SSL is configured)
-        # location / {
-        #     return 301 https://$host$request_uri;
-        # }
+        server_name smart-perp.xyz www.smart-perp.xyz _;
 
         # Root - serve frontend
         root /usr/share/nginx/html;
         index index.html;
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
 
         # Frontend routes (SPA)
         location / {
