fix: add no-cache headers for index.html

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,6 +52,17 @@ http {
         # Frontend routes (SPA)
         location / {
             try_files $uri $uri/ /index.html;
+            # Don't cache HTML files
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+        
+        # Explicitly handle index.html with no-cache
+        location = /index.html {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
         }
 
         # API proxy
