--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,6 +81,20 @@ http {
             proxy_read_timeout 60s;
         }
 
+        # WebSocket proxy
+        location /ws {
+            proxy_pass http://api_server;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400s;  # 24 hours for long-lived connections
+            proxy_send_timeout 86400s;
+        }
+
         # Health check
         location /health {
             proxy_pass http://api_server/api/health;
