fix: improve WebSocket proxy config for Cloudflare

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,12 @@ http {
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
+    # WebSocket connection upgrade mapping
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     # Upstream for API
     upstream api_server {
         server api:3001;
@@ -86,13 +92,15 @@ http {
             proxy_pass http://api_server;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 86400s;  # 24 hours for long-lived connections
             proxy_send_timeout 86400s;
+            proxy_buffering off;  # Disable buffering for WebSocket
+            proxy_cache off;      # Disable caching for WebSocket
         }
 
         # Health check
