feat: 添加 Binance Dump Radar 出货雷达功能
主要功能:
- 监控大额代币充值到 Binance (>= cd /Users/hexie/projects/smart-perp && git commit -m "feat: 添加 Binance Dump Radar 出货雷达功能

主要功能:
- 监控大额代币充值到 Binance (>= $1M)
- 支持 ETH/BSC/ARB/BASE/SOL 多链监控
- 代币列表来自币安现货 API (440+ 代币)
- 实时事件 Feed 展示
- 按代币/网络/金额筛选
- 显示 5m/1h/4h/12h/24h 各时段统计
- 各链充值分布展示

Telegram 通知:
- 支持绑定 Telegram 接收通知
- 可选监控全部代币或指定代币
- 同步当前页面选择到通知设置

技术实现:
- Worker 监控链上 ERC20 Transfer 事件
- 88个 Binance 地址 (热钱包/冷钱包)
- CoinGecko API 获取实时价格
- PostgreSQL LISTEN/NOTIFY 实时推送
- 数据库迁移系统"M)
- 支持 ETH/BSC/ARB/BASE/SOL 多链监控
- 代币列表来自币安现货 API (440+ 代币)
- 实时事件 Feed 展示
- 按代币/网络/金额筛选
- 显示 5m/1h/4h/12h/24h 各时段统计
- 各链充值分布展示

Telegram 通知:
- 支持绑定 Telegram 接收通知
- 可选监控全部代币或指定代币
- 同步当前页面选择到通知设置

技术实现:
- Worker 监控链上 ERC20 Transfer 事件
- 88个 Binance 地址 (热钱包/冷钱包)
- CoinGecko API 获取实时价格
- PostgreSQL LISTEN/NOTIFY 实时推送
- 数据库迁移系统

--- a/server/env.example
+++ b/server/env.example
@@ -13,3 +13,24 @@ WORKER_LEADERBOARD_CRON=0 */6 * * *
 WORKER_TRADES_CRON=0 * * * *
 WORKER_METRICS_CRON=*/30 * * * *
 
+# Dump Radar Worker
+# RPC URLs (建议使用 Alchemy/Infura 的私有节点)
+ETH_RPC_URL=https://eth.llamarpc.com
+BSC_RPC_URL=https://bsc-dataseed.binance.org
+ARB_RPC_URL=https://arb1.arbitrum.io/rpc
+BASE_RPC_URL=https://mainnet.base.org
+
+# 最小充值金额阈值 (USD)，低于此金额不记录
+DUMP_RADAR_MIN_USD=100000
+
+# Etherscan API Key (可选，用于获取地址标签)
+ETHERSCAN_API_KEY=
+
+# Arkham Intelligence API Key (可选，用于动态检测 CEX 地址)
+# 获取方式: https://platform.arkhamintelligence.com/
+ARKHAM_API_KEY=
+
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_USERNAME=smart_perp_bot
+
