--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "start": "node dist/index.js",
     "worker": "tsx watch src/worker/index.ts",
     "worker:once": "tsx src/worker/index.ts --once",
+    "worker:dump-radar": "tsx watch src/worker/dumpRadarRunner.ts",
+    "worker:dump-radar:once": "tsx src/worker/dumpRadarRunner.ts --once",
     "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
