--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,14 @@
     "worker:once": "tsx src/worker/index.ts --once",
     "worker:dump-radar": "tsx watch src/worker/dumpRadarRunner.ts",
     "worker:dump-radar:once": "tsx src/worker/dumpRadarRunner.ts --once",
+    "worker:dump-radar:solana": "tsx watch src/worker/dumpRadarRunner.ts --solana",
+    "worker:dump-radar:solana:once": "tsx src/worker/dumpRadarRunner.ts --solana --once",
+    "worker:dump-radar:all": "tsx watch src/worker/dumpRadarRunner.ts --all",
     "db:migrate": "tsx src/db/migrate.ts"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.14",
+    "@solana/web3.js": "^1.98.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethers": "^6.15.0",
