feat(dump-radar): optimize Binance address detection with Moralis API
- Add Moralis API integration for dynamic Binance address detection
- Implement smart detection: only call API for large transfers (>= $1M)
- Add persistent negative cache (not_binance_addresses table, 7-day TTL)
- Add memory cache for hot queries (1-hour TTL)
- Expand Binance address library with public sources
- Fix Telegram binding issues
- Update minimum threshold to $1M by default
- Remove periodic enrichment task, use on-demand detection instead

--- a/server/env.example
+++ b/server/env.example
@@ -26,6 +26,10 @@ DUMP_RADAR_MIN_USD=100000
 # Etherscan API Key (可选，用于获取地址标签)
 ETHERSCAN_API_KEY=
 
+# Moralis API Key (推荐，有地址标签功能)
+# 获取方式: https://moralis.io/ (免费账户有 40k 请求/月)
+MORALIS_API_KEY=
+
 # Arkham Intelligence API Key (可选，用于动态检测 CEX 地址)
 # 获取方式: https://platform.arkhamintelligence.com/
 ARKHAM_API_KEY=
